if (NOT FREERTOS_KERNEL_PATH AND NOT DEFINED ENV{FREERTOS_KERNEL_PATH})
    message("Skipping Pico W FreeRTOS examples as FREERTOS_KERNEL_PATH not defined")
else()
    include(FreeRTOS_Kernel_import.cmake)

    add_subdirectory(main)
    add_subdirectory(motor)
    add_subdirectory(wheelEncoder)
    add_subdirectory(ultrasonic)
endif()
